force-app/main/default/objects/Activity/fields/Agendamiento_SLE__c.field-meta.xml
<CustomField>
    <fullName>Agendamiento_SLE__c</fullName>
    <label>Agendamiento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cita</fullName>
            </value>
            <value>
                <fullName>Traslado</fullName>
            </value>
            <value>
                <fullName>Cirugía</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>