force-app/main/default/objects/Activity/fields/Initial_Notification_Cita_Cirugia__c.field-meta.xml
<CustomField>
    <fullName>Initial_Notification_Cita_Cirugia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Notification Cita / Cirugía</label>
    <type>Checkbox</type>
</CustomField>