force-app/main/default/objects/Activity/fields/Notification_Cita_Cirugia_24h__c.field-meta.xml
<CustomField>
    <fullName>Notification_Cita_Cirugia_24h__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notification Cita/Cirugia (24h)</label>
    <type>Checkbox</type>
</CustomField>